--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             z-index: 100;
             transition: box-shadow 0.3s;
             display: flex;
-            justify-content: center;
+            justify-content: Space-between;
             align-items: center;
             position: relative;
         }
@@ -156,7 +156,7 @@
             opacity: 0;
             animation: fadeInUp 1s 0.3s forwards;
             text-shadow: 1px 1px 4px rgba(0,0,0,0.2);
-            font-weight: 500;
+            font-weight: 450;
         }
 
         .cta-button {
@@ -378,8 +378,8 @@
         }
 
         .venue-image {
-            width: 100%;
-            max-width: 1100px;
+            width: 80%;
+            max-width: 800px;
             height: auto;
             border-radius: 25px;
             box-shadow: 0 20px 60px rgba(255, 107, 53, 0.25);
