Implement video header background and style updates
Added a video background to the header and adjusted styles.

--- a/index.html
+++ b/index.html
@@ -20,37 +20,74 @@
         }
 
         header {
-            background-color: #FFFFFF;
-            padding: 25px 60px;
-            box-shadow: 0 2px 12px rgba(75, 14, 35, 0.08);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            transition: all 0.3s;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+           background-color: #FFFFFF;
+    padding: 25px 60px;
+    box-shadow: 0 2px 12px rgba(75, 14, 35, 0.08);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    transition: all 0.3s;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    overflow: hidden;
+    min-height: 100px;
         }
+        .header-video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    object-fit: cover;
+    opacity: 0.25;
+    pointer-events: none;
+}
+
+.header-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    z-index: 1;
+    pointer-events: none;
+}
 
         header.scrolled {
-            box-shadow: 0 4px 16px rgba(75, 14, 35, 0.12);
-            background-color: #FFFBF5;
-        }
+    box-shadow: 0 4px 16px rgba(75, 14, 35, 0.12);
+}
 
+header.scrolled .header-video {
+    opacity: 0.15;
+}
+
+header.scrolled .header-overlay {
+    background: rgba(255, 251, 245, 0.8);
+}
         .logo {
-            height: 50px;
-            transition: transform 0.3s;
-        }
+    height: 50px;
+    transition: transform 0.3s;
+    position: relative;
+    z-index: 2;
+}
 
         .logo:hover {
             transform: scale(1.05);
         }
 
-        .language-switcher {
-            display: flex;
-            gap: 12px;
-            align-items: center;
-        }
+       .language-switcher {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    position: relative;
+    z-index: 2;
+}
 
         .lang-btn {
             padding: 10px 28px;
@@ -631,13 +668,20 @@
     </style>
 </head>
 <body>
-    <header id="header">
-       <img src="https://i.imgur.com/TIe20GD.jpeg" alt="Spottly Logo" class="logo">
-       <div class="language-switcher">
-           <button class="lang-btn active" onclick="changeLanguage('en')">EN</button>
-           <button class="lang-btn" onclick="changeLanguage('es')">ES</button>
-       </div>
-    </header>
+  <header id="header">
+   <video autoplay muted loop playsinline class="header-video" id="headerVideo">
+       <source src="https://raw.githubusercontent.com/vickybernardez28/Spottly-landing-page/main/video.jpg.mp4" type="video/mp4">
+       <source src="./video.jpg.mp4" type="video/mp4">
+       Tu navegador no soporta videos HTML5.
+   </video>
+   <div class="header-overlay"></div>
+   
+   <img src="https://i.imgur.com/TIe20GD.jpeg" alt="Spottly Logo" class="logo">
+   <div class="language-switcher">
+       <button class="lang-btn active" onclick="changeLanguage('en')">EN</button>
+       <button class="lang-btn" onclick="changeLanguage('es')">ES</button>
+   </div>
+</header>
 
     <section class="hero">
         <div class="hero-content">
@@ -762,7 +806,24 @@
     <div class="scroll-indicator" id="scrollTop">↑</div>
 
     <script>
-        const translations = {
+// Forzar reproducción del video
+    document.addEventListener('DOMContentLoaded', function() {
+        const video = document.getElementById('headerVideo');
+        if (video) {
+            video.muted = true;
+            video.play().catch(error => {
+                console.log('Video autoplay was prevented:', error);
+                // Intentar reproducir en la primera interacción del usuario
+                document.body.addEventListener('click', function playVideo() {
+                    video.play();
+                    document.body.removeEventListener('click', playVideo);
+                }, { once: true });
+            });
+        }
+    });
+
+    const translations = {
+
             en: {
                 heroTitle: "Empty Tables, <strong>New Opportunities.</strong>",
                 heroSubtitle: "List your café on Spottly and let freelancers and remote workers book your tables during slow hours - effortlessly and profitably",
