Update revenue and challenge descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <div class="stat-label">Monthly Bookings</div>
             </div>
             <div class="stat-box">
-                <div class="stat-number">$3,500</div>
+                <div class="stat-number">$500.000</div>
                 <div class="stat-label">Additional Monthly Revenue</div>
             </div>
             <div class="stat-box">
@@ -1050,7 +1050,7 @@ const translations = {
         stat3Label: "Occupancy Rate Increase",
         stat4Label: "Average Rating",
         challengeTitle: "The Challenge",
-        challenge1: "70% of tables empty during weekday mornings",
+        challenge1: "Tables unused during the morning",
         challenge2: "Limited revenue between 8 AM - 12 PM",
         challenge3: "High fixed costs with underutilized space",
         challenge4: "Difficulty attracting remote workers organically",
@@ -1120,7 +1120,7 @@ const translations = {
         stat3Label: "Aumento en Tasa de Ocupación",
         stat4Label: "Calificación Promedio",
         challengeTitle: "El Desafío",
-        challenge1: "70% de las mesas vacías durante las mañanas de semana",
+        challenge1: "Mesas sin uso durante la mañana",
         challenge2: "Ingresos limitados entre 8 AM - 12 PM",
         challenge3: "Altos costos fijos con espacio subutilizado",
         challenge4: "Dificultad para atraer trabajadores remotos orgánicamente",
