Update challenge description in index.html

--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
             <div class="cs-box">
                 <h4>The Challenge</h4>
                 <ul>
-                    <li>70% of tables empty during weekday mornings</li>
+                    <li>Unused tables during the morning</li>
                     <li>Limited revenue between 8 AM - 12 PM</li>
                     <li>High fixed costs with underutilized space</li>
                     <li>Difficulty attracting remote workers organically</li>
