Refine wording of challenge description

--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@ const translations = {
         stat3Label: "Occupancy Rate Increase",
         stat4Label: "Average Rating",
         challengeTitle: "The Challenge",
-        challenge1: "Tables unused during the morning",
+        challenge1: "Unused tables during the morning",
         challenge2: "Limited revenue between 8 AM - 12 PM",
         challenge3: "High fixed costs with underutilized space",
         challenge4: "Difficulty attracting remote workers organically",
