--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                 <h4>The Solution</h4>
                 <ul>
                     <li>Listed venue on Spottly platform</li>
-                    <li>Offered hourly desk bookings at $5/hour</li>
+                    <li>Offered shift desk bookings</li>
                     <li>Set up dedicated "work-friendly" zones</li>
                     <li>Automated reservation and payment system</li>
                 </ul>
@@ -939,7 +939,7 @@
                     <span>Total Bookings</span>
                 </div>
                 <div class="result-item">
-                    <strong>$10,500</strong>
+                    <strong>$50K</strong>
                     <span>Generated Revenue</span>
                 </div>
                 <div class="result-item">
@@ -1056,7 +1056,7 @@ const translations = {
         challenge4: "Difficulty attracting remote workers organically",
         solutionTitle: "The Solution",
         solution1: "Listed venue on Spottly platform",
-        solution2: "Offered hourly desk bookings at $5/hour",
+        solution2: "Offered shift desk bookings",
         solution3: "Set up dedicated \"work-friendly\" zones",
         solution4: "Automated reservation and payment system",
         resultsTitle: "Results After 3 Months",
@@ -1126,7 +1126,7 @@ const translations = {
         challenge4: "Dificultad para atraer trabajadores remotos orgánicamente",
         solutionTitle: "La Solución",
         solution1: "Registró el local en la plataforma Spottly",
-        solution2: "Ofreció reservas de escritorio por hora a $5/hora",
+        solution2: "Ofreció reservas de escritorio por turno",
         solution3: "Configuró zonas dedicadas \"amigables para el trabajo\"",
         solution4: "Sistema automatizado de reservas y pagos",
         resultsTitle: "Resultados Después de 3 Meses",
