Update solutions and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
                 <ul>
                     <li>Listed venue on Spottly platform</li>
                     <li>Offered shift desk bookings</li>
-                    <li>Set up dedicated "work-friendly" zones</li>
+                    <li>Cinema style booking system lets customers choose their perfect spot</li>
                     <li>Automated reservation and payment system</li>
                 </ul>
             </div>
@@ -1057,7 +1057,7 @@ const translations = {
         solutionTitle: "The Solution",
         solution1: "Listed venue on Spottly platform",
         solution2: "Offered shift desk bookings",
-        solution3: "Set up dedicated \"work-friendly\" zones",
+        solution3: "Cinema style boiking system lets customers choose their perfect spot",
         solution4: "Automated reservation and payment system",
         resultsTitle: "Results After 3 Months",
         result1Label: "Total Bookings",
@@ -1127,7 +1127,7 @@ const translations = {
         solutionTitle: "La Solución",
         solution1: "Registró el local en la plataforma Spottly",
         solution2: "Ofreció reservas de escritorio por turno",
-        solution3: "Configuró zonas dedicadas \"amigables para el trabajo\"",
+        solution3: "El sistema de reservas tipo cine permite a los clientes elegir su lugar perfecto",
         solution4: "Sistema automatizado de reservas y pagos",
         resultsTitle: "Resultados Después de 3 Meses",
         result1Label: "Reservas Totales",
