--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
             <div class="cs-box">
                 <h4>The Challenge</h4>
                 <ul>
-                    <li>70% of tables empty during weekday mornings</li>
+                    <li>Unused tables during weekday mornings</li>
                     <li>Limited revenue between 8 AM - 12 PM</li>
                     <li>High fixed costs with underutilized space</li>
                     <li>Difficulty attracting remote workers organically</li>
@@ -924,7 +924,7 @@
                 <h4>The Solution</h4>
                 <ul>
                     <li>Listed venue on Spottly platform</li>
-                    <li>Offered hourly desk bookings at $5/hour</li>
+                    <li>Cinema booking style system lets customers choose their perfect spot</li>
                     <li>Set up dedicated "work-friendly" zones</li>
                     <li>Automated reservation and payment system</li>
                 </ul>
@@ -935,11 +935,11 @@
             <h4>Results After 3 Months</h4>
             <div class="results-grid">
                 <div class="result-item">
-                    <strong>450+</strong>
+                    <strong>500+</strong>
                     <span>Total Bookings</span>
                 </div>
                 <div class="result-item">
-                    <strong>$10,500</strong>
+                    <strong>$5M</strong>
                     <span>Generated Revenue</span>
                 </div>
                 <div class="result-item">
@@ -1050,13 +1050,13 @@ const translations = {
         stat3Label: "Occupancy Rate Increase",
         stat4Label: "Average Rating",
         challengeTitle: "The Challenge",
-        challenge1: "70% of tables empty during weekday mornings",
+        challenge1: "Unused tables during weekday mornings",
         challenge2: "Limited revenue between 8 AM - 12 PM",
         challenge3: "High fixed costs with underutilized space",
         challenge4: "Difficulty attracting remote workers organically",
         solutionTitle: "The Solution",
         solution1: "Listed venue on Spottly platform",
-        solution2: "Offered hourly desk bookings at $5/hour",
+        solution2: "Cinema booking style lets customers choose their perfect spot",
         solution3: "Set up dedicated \"work-friendly\" zones",
         solution4: "Automated reservation and payment system",
         resultsTitle: "Results After 3 Months",
@@ -1120,13 +1120,13 @@ const translations = {
         stat3Label: "Aumento en Tasa de Ocupación",
         stat4Label: "Calificación Promedio",
         challengeTitle: "El Desafío",
-        challenge1: "70% de las mesas vacías durante las mañanas de semana",
+        challenge1: "Mesas sin uso durante las mañanas de semana",
         challenge2: "Ingresos limitados entre 8 AM - 12 PM",
         challenge3: "Altos costos fijos con espacio subutilizado",
         challenge4: "Dificultad para atraer trabajadores remotos orgánicamente",
         solutionTitle: "La Solución",
         solution1: "Registró el local en la plataforma Spottly",
-        solution2: "Ofreció reservas de escritorio por hora a $5/hora",
+        solution2: "El sistema de reservas de cine permite a los clientes elegir su lugar perfecto",
         solution3: "Configuró zonas dedicadas \"amigables para el trabajo\"",
         solution4: "Sistema automatizado de reservas y pagos",
         resultsTitle: "Resultados Después de 3 Meses",
