Update additional monthly revenue from $3,500 to $2M

--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <div class="stat-label">Monthly Bookings</div>
             </div>
             <div class="stat-box">
-                <div class="stat-number">$3,500</div>
+                <div class="stat-number">$2M</div>
                 <div class="stat-label">Additional Monthly Revenue</div>
             </div>
             <div class="stat-box">
